--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-beautifulsoup4==4.12.2
-dnspython==2.3.0
-Flask==2.2.2
-Flask_Cors==4.0.0
-Flask_PyMongo==2.3.0
-numpy==1.24.0
-pymongo==3.13.0
-python-dotenv==1.0.0
-requests==2.28.1
+beautifulsoup4==4.12.3
+numpy==1.25.2
+pymongo==4.3.3
+pyproj==3.5.0
+python-dotenv==1.0.1
+Requests==2.31.0
 tqdm==4.65.0
-gunicorn==20.0.4
