--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.14.2",
+    "fire>=0.7.1",
     "lxml>=6.0.2",
     "numpy>=2.3.3",
     "pandas>=2.3.3",
